grun_testing/WPLParser.java
// Generated from WPL.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WPLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, BOOL=2, INT=3, STR=4, VAR=5, PROC=6, FUNC=7, EXTERN=8, RETURN=9, 
		WHILE=10, DO=11, SELECT=12, END=13, IF=14, THEN=15, ELSE=16, LENGTH=17, 
		AND=18, ASSIGN=19, EQUAL=20, GEQ=21, GTR=22, LEQ=23, LESS=24, MINUS=25, 
		NEQ=26, OR=27, PLUS=28, DIV=29, MUL=30, NOT=31, COMMA=32, SEMICOLON=33, 
		ELLIPSIS=34, DOT=35, LBRACKET=36, RBRACKET=37, LPAR=38, RPAR=39, LBRACE=40, 
		RBRACE=41, WS=42, INTEGER=43, BOOLEAN=44, ID=45, STRING=46, COMMENT=47;
	public static final int
		RULE_compilationUnit = 0, RULE_cuComponent = 1, RULE_varDeclaration = 2, 
		RULE_scalarDeclaration = 3, RULE_scalar = 4, RULE_arrayDeclaration = 5, 
		RULE_type = 6, RULE_varInitializer = 7, RULE_externDeclaration = 8, RULE_procedure = 9, 
		RULE_procHeader = 10, RULE_externProcHeader = 11, RULE_function = 12, 
		RULE_funcHeader = 13, RULE_externFuncHeader = 14, RULE_params = 15, RULE_block = 16, 
		RULE_statement = 17, RULE_loop = 18, RULE_conditional = 19, RULE_select = 20, 
		RULE_selectAlt = 21, RULE_call = 22, RULE_arguments = 23, RULE_arg = 24, 
		RULE_return = 25, RULE_constant = 26, RULE_assignment = 27, RULE_arrayIndex = 28, 
		RULE_expr = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "cuComponent", "varDeclaration", "scalarDeclaration", 
			"scalar", "arrayDeclaration", "type", "varInitializer", "externDeclaration", 
			"procedure", "procHeader", "externProcHeader", "function", "funcHeader", 
			"externFuncHeader", "params", "block", "statement", "loop", "conditional", 
			"select", "selectAlt", "call", "arguments", "arg", "return", "constant", 
			"assignment", "arrayIndex", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'boolean'", "'int'", "'str'", "'var'", "'proc'", "'func'", 
			"'extern'", "'return'", "'while'", "'do'", "'select'", "'end'", "'if'", 
			"'then'", "'else'", "'length'", "'&'", "'<-'", "'='", "'>='", "'>'", 
			"'<='", "'<'", "'-'", "'~='", "'|'", "'+'", "'/'", "'*'", "'~'", "','", 
			"';'", "'...'", "'.'", "'['", "']'", "'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "BOOL", "INT", "STR", "VAR", "PROC", "FUNC", "EXTERN", "RETURN", 
			"WHILE", "DO", "SELECT", "END", "IF", "THEN", "ELSE", "LENGTH", "AND", 
			"ASSIGN", "EQUAL", "GEQ", "GTR", "LEQ", "LESS", "MINUS", "NEQ", "OR", 
			"PLUS", "DIV", "MUL", "NOT", "COMMA", "SEMICOLON", "ELLIPSIS", "DOT", 
			"LBRACKET", "RBRACKET", "LPAR", "RPAR", "LBRACE", "RBRACE", "WS", "INTEGER", 
			"BOOLEAN", "ID", "STRING", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WPL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WPLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(WPLParser.EOF, 0); }
		public List<CuComponentContext> cuComponent() {
			return getRuleContexts(CuComponentContext.class);
		}
		public CuComponentContext cuComponent(int i) {
			return getRuleContext(CuComponentContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				cuComponent();
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << STR) | (1L << VAR) | (1L << PROC) | (1L << EXTERN))) != 0) );
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CuComponentContext extends ParserRuleContext {
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public ProcedureContext procedure() {
			return getRuleContext(ProcedureContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ExternDeclarationContext externDeclaration() {
			return getRuleContext(ExternDeclarationContext.class,0);
		}
		public CuComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuComponent; }
	}

	public final CuComponentContext cuComponent() throws RecognitionException {
		CuComponentContext _localctx = new CuComponentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_cuComponent);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				varDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				procedure();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				function();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				externDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public ScalarDeclarationContext scalarDeclaration() {
			return getRuleContext(ScalarDeclarationContext.class,0);
		}
		public ArrayDeclarationContext arrayDeclaration() {
			return getRuleContext(ArrayDeclarationContext.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDeclaration);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				scalarDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				arrayDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScalarDeclarationContext extends ParserRuleContext {
		public TypeContext t;
		public ScalarContext scalar;
		public List<ScalarContext> scalars = new ArrayList<ScalarContext>();
		public TerminalNode SEMICOLON() { return getToken(WPLParser.SEMICOLON, 0); }
		public List<ScalarContext> scalar() {
			return getRuleContexts(ScalarContext.class);
		}
		public ScalarContext scalar(int i) {
			return getRuleContext(ScalarContext.class,i);
		}
		public TerminalNode VAR() { return getToken(WPLParser.VAR, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(WPLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(WPLParser.COMMA, i);
		}
		public ScalarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scalarDeclaration; }
	}

	public final ScalarDeclarationContext scalarDeclaration() throws RecognitionException {
		ScalarDeclarationContext _localctx = new ScalarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_scalarDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
			case INT:
			case STR:
				{
				setState(77);
				((ScalarDeclarationContext)_localctx).t = type();
				}
				break;
			case VAR:
				{
				setState(78);
				match(VAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(81);
			((ScalarDeclarationContext)_localctx).scalar = scalar();
			((ScalarDeclarationContext)_localctx).scalars.add(((ScalarDeclarationContext)_localctx).scalar);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(82);
				match(COMMA);
				setState(83);
				((ScalarDeclarationContext)_localctx).scalar = scalar();
				((ScalarDeclarationContext)_localctx).scalars.add(((ScalarDeclarationContext)_localctx).scalar);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScalarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(WPLParser.ID, 0); }
		public VarInitializerContext varInitializer() {
			return getRuleContext(VarInitializerContext.class,0);
		}
		public ScalarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scalar; }
	}

	public final ScalarContext scalar() throws RecognitionException {
		ScalarContext _localctx = new ScalarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scalar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(ID);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(92);
				varInitializer();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDeclarationContext extends ParserRuleContext {
		public TypeContext typename;
		public TerminalNode LBRACKET() { return getToken(WPLParser.LBRACKET, 0); }
		public TerminalNode INTEGER() { return getToken(WPLParser.INTEGER, 0); }
		public TerminalNode RBRACKET() { return getToken(WPLParser.RBRACKET, 0); }
		public TerminalNode ID() { return getToken(WPLParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(WPLParser.SEMICOLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ArrayDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDeclaration; }
	}

	public final ArrayDeclarationContext arrayDeclaration() throws RecognitionException {
		ArrayDeclarationContext _localctx = new ArrayDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			((ArrayDeclarationContext)_localctx).typename = type();
			setState(96);
			match(LBRACKET);
			setState(97);
			match(INTEGER);
			setState(98);
			match(RBRACKET);
			setState(99);
			match(ID);
			setState(100);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode BOOL() { return getToken(WPLParser.BOOL, 0); }
		public TerminalNode INT() { return getToken(WPLParser.INT, 0); }
		public TerminalNode STR() { return getToken(WPLParser.STR, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << STR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarInitializerContext extends ParserRuleContext {
		public ConstantContext c;
		public TerminalNode ASSIGN() { return getToken(WPLParser.ASSIGN, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public VarInitializerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varInitializer; }
	}

	public final VarInitializerContext varInitializer() throws RecognitionException {
		VarInitializerContext _localctx = new VarInitializerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varInitializer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(ASSIGN);
			setState(105);
			((VarInitializerContext)_localctx).c = constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExternDeclarationContext extends ParserRuleContext {
		public TerminalNode EXTERN() { return getToken(WPLParser.EXTERN, 0); }
		public TerminalNode SEMICOLON() { return getToken(WPLParser.SEMICOLON, 0); }
		public ExternProcHeaderContext externProcHeader() {
			return getRuleContext(ExternProcHeaderContext.class,0);
		}
		public ExternFuncHeaderContext externFuncHeader() {
			return getRuleContext(ExternFuncHeaderContext.class,0);
		}
		public ExternDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_externDeclaration; }
	}

	public final ExternDeclarationContext externDeclaration() throws RecognitionException {
		ExternDeclarationContext _localctx = new ExternDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_externDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(EXTERN);
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROC:
				{
				setState(108);
				externProcHeader();
				}
				break;
			case BOOL:
			case INT:
			case STR:
				{
				setState(109);
				externFuncHeader();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(112);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureContext extends ParserRuleContext {
		public ProcHeaderContext procHeader() {
			return getRuleContext(ProcHeaderContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
	}

	public final ProcedureContext procedure() throws RecognitionException {
		ProcedureContext _localctx = new ProcedureContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_procedure);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			procHeader();
			setState(115);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcHeaderContext extends ParserRuleContext {
		public Token id;
		public ParamsContext p;
		public TerminalNode PROC() { return getToken(WPLParser.PROC, 0); }
		public TerminalNode LPAR() { return getToken(WPLParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(WPLParser.RPAR, 0); }
		public TerminalNode ID() { return getToken(WPLParser.ID, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public ProcHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procHeader; }
	}

	public final ProcHeaderContext procHeader() throws RecognitionException {
		ProcHeaderContext _localctx = new ProcHeaderContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_procHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(PROC);
			setState(118);
			((ProcHeaderContext)_localctx).id = match(ID);
			setState(119);
			match(LPAR);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << STR))) != 0)) {
				{
				setState(120);
				((ProcHeaderContext)_localctx).p = params();
				}
			}

			setState(123);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExternProcHeaderContext extends ParserRuleContext {
		public Token id;
		public TerminalNode PROC() { return getToken(WPLParser.PROC, 0); }
		public TerminalNode LPAR() { return getToken(WPLParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(WPLParser.RPAR, 0); }
		public TerminalNode ID() { return getToken(WPLParser.ID, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(WPLParser.COMMA, 0); }
		public TerminalNode ELLIPSIS() { return getToken(WPLParser.ELLIPSIS, 0); }
		public ExternProcHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_externProcHeader; }
	}

	public final ExternProcHeaderContext externProcHeader() throws RecognitionException {
		ExternProcHeaderContext _localctx = new ExternProcHeaderContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_externProcHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(PROC);
			setState(126);
			((ExternProcHeaderContext)_localctx).id = match(ID);
			setState(127);
			match(LPAR);
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				{
				setState(128);
				params();
				setState(129);
				match(COMMA);
				setState(130);
				match(ELLIPSIS);
				}
				}
				break;
			case 2:
				{
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << STR))) != 0)) {
					{
					setState(132);
					params();
					}
				}

				}
				break;
			case 3:
				{
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELLIPSIS) {
					{
					setState(135);
					match(ELLIPSIS);
					}
				}

				}
				break;
			}
			setState(140);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public FuncHeaderContext funcHeader() {
			return getRuleContext(FuncHeaderContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			funcHeader();
			setState(143);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncHeaderContext extends ParserRuleContext {
		public TypeContext t;
		public Token id;
		public ParamsContext p;
		public TerminalNode FUNC() { return getToken(WPLParser.FUNC, 0); }
		public TerminalNode LPAR() { return getToken(WPLParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(WPLParser.RPAR, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(WPLParser.ID, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FuncHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcHeader; }
	}

	public final FuncHeaderContext funcHeader() throws RecognitionException {
		FuncHeaderContext _localctx = new FuncHeaderContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_funcHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			((FuncHeaderContext)_localctx).t = type();
			setState(146);
			match(FUNC);
			setState(147);
			((FuncHeaderContext)_localctx).id = match(ID);
			setState(148);
			match(LPAR);
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << STR))) != 0)) {
				{
				setState(149);
				((FuncHeaderContext)_localctx).p = params();
				}
			}

			setState(152);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExternFuncHeaderContext extends ParserRuleContext {
		public TypeContext t;
		public Token id;
		public TerminalNode FUNC() { return getToken(WPLParser.FUNC, 0); }
		public TerminalNode LPAR() { return getToken(WPLParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(WPLParser.RPAR, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(WPLParser.ID, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(WPLParser.COMMA, 0); }
		public TerminalNode ELLIPSIS() { return getToken(WPLParser.ELLIPSIS, 0); }
		public ExternFuncHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_externFuncHeader; }
	}

	public final ExternFuncHeaderContext externFuncHeader() throws RecognitionException {
		ExternFuncHeaderContext _localctx = new ExternFuncHeaderContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_externFuncHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			((ExternFuncHeaderContext)_localctx).t = type();
			setState(155);
			match(FUNC);
			setState(156);
			((ExternFuncHeaderContext)_localctx).id = match(ID);
			setState(157);
			match(LPAR);
			setState(168);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				{
				setState(158);
				params();
				setState(159);
				match(COMMA);
				setState(160);
				match(ELLIPSIS);
				}
				}
				break;
			case 2:
				{
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << STR))) != 0)) {
					{
					setState(162);
					params();
					}
				}

				}
				break;
			case 3:
				{
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELLIPSIS) {
					{
					setState(165);
					match(ELLIPSIS);
					}
				}

				}
				break;
			}
			setState(170);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
